complete till testFindOwnerByPet